--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation("com.mysql:mysql-connector-j:9.3.0")
     // Hibernate Core
     implementation("org.hibernate.orm:hibernate-core:6.6.3.Final")
+    // JUnit 5
+    implementation 'org.junit.jupiter:junit-jupiter'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
