--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ dependencies {
     implementation("com.mysql:mysql-connector-j:9.3.0")
     // Hibernate Core
     implementation("org.hibernate.orm:hibernate-core:6.6.3.Final")
+    // Jchache
+    implementation("org.hibernate.orm:hibernate-jcache:6.6.3.Final")
+    // EHCache
+    implementation 'org.ehcache:ehcache:3.10.8'
     // JUnit 5
     implementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
     testImplementation platform('org.junit:junit-bom:5.9.1')
